feat: remove unnecessary fields in ProductsResource